@@ -84,6 +84,16 @@
 #define memcpy_P(x, y, z)       memcpy(x, y, z)
 
 /* -------------------------------------------------------------------------
+ * emulated IRQs
+ * ------------------------------------------------------------------------- */
+enum {
+	IRQ_TIMER0,
+    IRQ_UART0_RX,
+    IRQ_UART1_RX,
+	IRQ_MAX
+};
+
+/* -------------------------------------------------------------------------
  * emulated heap
  * ------------------------------------------------------------------------- */
 
